# smart-weather

./: .env.original  .gitignore  Makefile  README.md  pyproject.toml
smart_weather/: app.py  cli.py  config.py  schema.py
smart_weather/agents/: __init__.py  alert_agent.py  coordinates_getter_agent.py  location_gen_agent.py  suggest_agent.py  weather_forecast_agent.py
